// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetailsFooter renders per snapshot when all card interactions are supported (ie, web) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
      }
    }
    issueDetailsData={
      Object {
        "element": Object {
          "conciseName": "conciseName",
          "identifier": "identifier",
        },
        "howToFixSummary": "howToFixSummary",
        "rule": Object {
          "description": "description",
          "guidance": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "id": "id",
          "url": "url",
        },
        "snippet": "snippet",
        "targetApp": Object {
          "name": "name",
          "url": "url",
        },
      }
    }
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot when only UserConfig-agnostic card interactions are supported (ie, electron) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": false,
        },
      }
    }
    issueDetailsData={
      Object {
        "element": Object {
          "conciseName": "conciseName",
          "identifier": "identifier",
        },
        "howToFixSummary": "howToFixSummary",
        "rule": Object {
          "description": "description",
          "guidance": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "id": "id",
          "url": "url",
        },
        "snippet": "snippet",
        "targetApp": Object {
          "name": "name",
          "url": "url",
        },
      }
    }
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="hidden" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
      }
    }
    issueDetailsData={
      Object {
        "element": Object {
          "conciseName": "conciseName",
          "identifier": "identifier",
        },
        "howToFixSummary": "howToFixSummary",
        "rule": Object {
          "description": "description",
          "guidance": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "id": "id",
          "url": "url",
        },
        "snippet": "snippet",
        "targetApp": Object {
          "name": "name",
          "url": "url",
        },
      }
    }
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="unavailable" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight unavailable"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight unavailable
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
      }
    }
    issueDetailsData={
      Object {
        "element": Object {
          "conciseName": "conciseName",
          "identifier": "identifier",
        },
        "howToFixSummary": "howToFixSummary",
        "rule": Object {
          "description": "description",
          "guidance": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "id": "id",
          "url": "url",
        },
        "snippet": "snippet",
        "targetApp": Object {
          "name": "name",
          "url": "url",
        },
      }
    }
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="visible" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight visible"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight visible
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
      }
    }
    issueDetailsData={
      Object {
        "element": Object {
          "conciseName": "conciseName",
          "identifier": "identifier",
        },
        "howToFixSummary": "howToFixSummary",
        "rule": Object {
          "description": "description",
          "guidance": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "id": "id",
          "url": "url",
        },
        "snippet": "snippet",
        "targetApp": Object {
          "name": "name",
          "url": "url",
        },
      }
    }
  />
</div>
`;
